# Diploma-thesis

./: README.md  _config.yml  poznamky-svec.txt
code/TNNP/datapreparation/: plotDataset.py
code/arm_movement/: CMakeLists.txt  tutorial_arm.cpp
code/generator/: .CMakeLists.txt.swp  CMakeLists.txt  cartesianCtrlSetup.sh  cdataset.csv  iGazeCtrlSetup.sh  kill.sh  start.sh
code/generator/data/: dataset.txt  datasetv2.0.csv  datasetv2.0.txt  datasetv2.1.csv  datasetv2.2.csv  points.txt
code/generator/include/: My_ICub.h  matrix_operations.h  yarp_world_rpc.h
code/generator/src/: My_ICub.cpp  generator_dataset.cpp  matrix_operations.cpp  yarp_world_rpc.cpp
code/helloworld/: CMakeLists.txt  main.cpp
code/svec/matlab/: RFshifts.m  centerOfMass.m  clusterActivations.m  clusterHiddensOnRetina.m  clusterVisual.m  gmFixedGaze.m  gmFixedVisual.m  lala.m  loadActivations.m  loadHidden.m  loadHiddenWeights.m  loadOutputWeights.m  loadVisualInput.m  plotActivationsAsBubbles.m  plotActivationsAsGlyphs.m  plotOuts.m  plotReceptiveField.m  plotWeights.m  rfgfDifference.m  scriptLoadAndPrintActivations.m  somActivations.m  (+1 more)
notes/: .SM%coods.swp  ZipperAndAndersen  gain_field  note-RBM.txt  notes-RBM2.txt  notes-destiny-estimation.txt  notes-svec-diploma.txt  notes_gen_data.txt  poznamky_coodinate_frames  reference_frames.txt  rf_plain.txt  rf_plain_sk.txt
notes/mPdf/: notes-destiny-estimation.txt  notes-svec-diploma.txt
notes/pdf/: new%coordnotes  nl  svec.txt
notes/progress/: README.md  results.md
thesis/images/: Screenshot from 2018-12-15 16-40-16.xcf
(+6412 files in other folders)
