CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(DATASET_GENERATOR)

FIND_PACKAGE(YARP REQUIRED)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(include)

SET(SOURCES src/generator_dataset.cpp src/My_ICub.cpp include/My_ICub.h) 

ADD_EXECUTABLE(dataset ${SOURCES})

TARGET_LINK_LIBRARIES(dataset ${YARP_LIBRARIES})
